# audiby

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  library.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: InLibrary.tsx
